--- a/wp-content/themes/bdo-store/assets/src/sass/1-base/_mixins.scss
+++ b/wp-content/themes/bdo-store/assets/src/sass/1-base/_mixins.scss
@@ -222,6 +222,7 @@
 @mixin header-section{
   @include font-bold;
   @include font-size(20);
+  margin-top: 0;
   @include breakpoint($break-mobile){
     @include font-size(30);
   }
