--- a/wp-content/themes/bdo-store/assets/src/sass/3-components/_listing.scss
+++ b/wp-content/themes/bdo-store/assets/src/sass/3-components/_listing.scss
@@ -4,11 +4,7 @@
   }
   &__heading{
     @include header-section;
-    margin-top: 0.3em;
     margin-bottom: 0.8em;
-  }
-  &__container{
-    padding-bottom: clamp(0.5rem, 3vw, 3rem);
   }
   @mixin griddefaults{
     display: grid;
